# lobes-cli

./: .env.example  .gitignore  .markdownlint-cli2.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  culture.yaml  docker-compose.yml  pyproject.toml  sonar-project.properties
.claude/: skills.local.yaml.example
.devague/: current  current_plan
.devague/deliveries/: realtime-voice-to-voice-astro-test-site-151.json
.devague/frames/: compose-chain-unification-init-repair-doctor-stale.json  lobes-adds-a-third-middle-model-tier-and-pressure.json  lobes-exposes-the-full-colleague-runtime-stack-as.json  lobes-fits-the-machine-it-lands-on-one-command-det.json  lobes-gateway-relays-sse-streams-frame-by-frame-th.json  lobes-never-advertises-a-capability-it-cannot-serv.json  lobes-now-defaults-to-a-spark-duo-the-qwen3-6-27b.json  lobes-preserves-qwen-thinking-traces-across-multi.json  lobes-serves-strict-grammar-constrained-tool-calls.json  lobes-serves-the-brain-shape-you-choose-machine-as.json  lobes-serves-the-mesh-brain-end-state-one-lobe-per.json  lobes-ships-a-custom-vllm-image-from-nvcr-io-nvidi.json  lobes-ships-a-minor-lobe-a-cheap-warm-co-resident.json  lobes-ships-a-per-lobe-benchmark-suite-speed-paral.json  lobes-tells-clients-the-truth-about-a-fleet-a-cons.json  lobes-unifies-its-generate-lane-on-one-vllm-nightl.json  model-gear-now-serves-an-embedding-gear-qwen3-embe-2.json  model-gear-now-serves-an-embedding-gear-qwen3-embe.json  model-gear-owns-the-audio-i-o-surface-end-to-end-m.json  proxy-lobes-pairwise-auth.json  realtime-voice-to-voice-astro-test-site-151.json  realtime-ws-server-vad-149.json  the-gemma-4-12b-gear-gets-speculative-decoding-lob.json  under-pressure-lobes-tells-you-the-cortex-model-is.json
.devague/plans/: compose-chain-unification-init-repair-doctor-stale.json  lobes-adds-a-third-middle-model-tier-and-pressure.json  lobes-exposes-the-full-colleague-runtime-stack-as.json  lobes-fits-the-machine-it-lands-on-one-command-det.json  lobes-gateway-relays-sse-streams-frame-by-frame-th.json  lobes-never-advertises-a-capability-it-cannot-serv.json  lobes-now-defaults-to-a-spark-duo-the-qwen3-6-27b.json  lobes-preserves-qwen-thinking-traces-across-multi.json  lobes-serves-strict-grammar-constrained-tool-calls.json  lobes-serves-the-brain-shape-you-choose-machine-as.json  lobes-serves-the-mesh-brain-end-state-one-lobe-per.json  lobes-ships-a-custom-vllm-image-from-nvcr-io-nvidi.json  lobes-ships-a-minor-lobe-a-cheap-warm-co-resident.json  lobes-ships-a-per-lobe-benchmark-suite-speed-paral.json  lobes-tells-clients-the-truth-about-a-fleet-a-cons.json  lobes-unifies-its-generate-lane-on-one-vllm-nightl.json  model-gear-now-serves-an-embedding-gear-qwen3-embe-2.json  model-gear-owns-the-audio-i-o-surface-end-to-end-m.json  proxy-lobes-pairwise-auth.json  realtime-voice-to-voice-astro-test-site-151.json  realtime-ws-server-vad-149.json  the-gemma-4-12b-gear-gets-speculative-decoding-lob.json  under-pressure-lobes-tells-you-the-cortex-model-is.json
.eidetic/memory/: colleague__public.jsonl  default__public.jsonl  lobes__public.jsonl
.github/workflows/: publish.yml  tests.yml
docs/: chatterbox-tts.md  colleague-stack.md  deployment-shapes.md  durable-logs.md  gateway-fleet.md  gemma-4-12b-nvfp4.md  gemma-4-31b-nvfp4.md  gemma4-mtp-draft.md  machine-profiles.md  mistral-small-3.2-24b-nvfp4.md  openai-api.md  orin-profiles.md  parakeet-stt.md  qwen3-14b-nvfp4.md  qwen3-32b-nvfp4.md  qwen3-embedding-0.6b.md  qwen3-embedding-4b.md  qwen3-reranker-0.6b.md  qwen3.5-4b-minor.md  qwen3.6-27b-nvfp4.md  qwen3.6-27b-text-nvfp4-mtp.md  qwen3.6-35b-a3b-nvfp4.md  realtime-pipeline.md  skill-sources.md  tensorrt-llm-investigation.md  tuning-profiles.md  validate-tiers.md  vllm-nightly-migration.md
docs/deliveries/: 2026-07-16-proxy-lobes-pairwise-auth.md  2026-07-21-realtime-voice-to-voice-astro-test-site-151.md
docs/evidence/: 2026-07-14-accept-referral-thor.txt  2026-07-14-accept-spark-lobe-gb10.txt  2026-07-14-accept-thor-lobe-live-referral-thor.txt  2026-07-14-accept-thor-lobe-thor.txt  2026-07-14-strict-tools-spark-lobe-spark.txt  2026-07-16-proxy-lobes-live-spark-thor.txt  2026-07-17-accept-muse-tool-calling-thor.txt  2026-07-20-accept-embed-deep-gb10.txt  2026-07-21-accept-realtime-spark.txt  2026-07-21-accept-voice-loop-spark.txt  2026-07-22-accept-realtime-voice-to-voice-spark.txt  README-realtime-acceptance.md
docs/plans/: 2026-06-12-model-gear-owns-the-audio-i-o-surface-end-to-end-m.md  2026-06-19-model-gear-now-serves-an-embedding-gear-qwen3-embe-2.md  2026-06-26-lobes-ships-a-minor-lobe-a-cheap-warm-co-resident.md  (+20 more)
lepenseur/: __init__.py  __main__.py
lobes/: __init__.py  __main__.py  _metrics.py  assess.py  catalog.py  profiles.py  roles.py  roles_measure.py
model_gear/: _metrics.py  assess.py  catalog.py  profiles.py
packaging/model-gear/: README.md  pyproject.toml
scripts/: accept-shape.sh  audio-smoke.py  gen-api-key.py  live-check.sh  realtime-smoke.py  realtime-voice-loop.py  validate-tiers.sh
site/: .env.example  .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
tests/: conftest.py  test_assess.py  test_assess_perf.py  test_bench_compare.py  test_bench_report.py  test_benchmark_all_lobes.py  test_boundary_serves_only.py  test_cat_probe.py  test_cat_score.py  test_catalog.py  test_catalog_tiers.py  test_chatterbox_pcm16.py  test_chatterbox_readiness.py  test_cli.py  test_cli_benchmark_profiles.py  test_cli_capabilities.py  test_cli_eval.py  test_cli_eval_cat.py  test_cli_fleet.py  test_cli_gateway_auth.py  test_cli_introspection.py  test_cli_logs.py  test_cli_measure.py  test_cli_route.py  test_cli_run.py  test_cli_runtime.py  test_cli_tunnel.py  test_cli_up.py  test_cli_wiring.py  test_client_reasoning_roundtrip.py  test_colleague_contract.py  test_compose_chain.py  test_detect.py  test_doctor.py  test_doctor_fix.py  test_doctor_machine_profile.py  test_dropped_lobe_honesty.py  test_fleet_audio_vad_env.py  test_fleet_minor.py  test_fleet_per_machine_knobs.py  (+75 more)
(+271 files in other folders)
