[project]
name = "model-gear"
version = "0.8.1"
description = "model-gear — run, assess, and switch the local vLLM model."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "AgentCulture"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/agentculture/model-gear"
Issues = "https://github.com/agentculture/model-gear/issues"

[project.scripts]
model = "model_gear.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["model_gear"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "pytest-cov>=4.1",
    "bandit>=1.7.5",
    "flake8>=6.1",
    "isort>=5.12.0",
    "black>=23.7.0",
    "afi-cli>=0.7",
]

[tool.coverage.run]
source = ["model_gear"]
omit = ["model_gear/__pycache__/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["model_gear"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.bandit]
exclude_dirs = ["tests"]
# B310: urllib.urlopen — all calls target the local vLLM endpoint (http://localhost).
skips = ["B101", "B404", "B603", "B310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
