[project]
name = "model-gear"
version = "0.22.0"
description = "model-gear — run, assess, and switch the local vLLM model."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "AgentCulture"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
]
dependencies = []

[project.optional-dependencies]
# The realtime audio container (model init --fleet --audio → the `realtime`
# service) installs this; the base wheel + the stdlib gateway never do. Keeps
# torch/fastapi out of every other install. Pulled by templates/fleet/Dockerfile.realtime.
realtime = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "numpy>=2.0",
    "scipy>=1.14",
    "python-multipart>=0.0.9",
    "silero-vad>=5.1",
    "torch>=2.5",
]

[project.urls]
Homepage = "https://github.com/agentculture/model-gear"
Issues = "https://github.com/agentculture/model-gear/issues"

[project.scripts]
model = "model_gear.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["model_gear"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "pytest-cov>=4.1",
    "bandit>=1.7.5",
    "flake8>=6.1",
    "isort>=5.12.0",
    "black>=23.7.0",
    "afi-cli>=0.7",
]

[tool.coverage.run]
source = ["model_gear"]
omit = [
    "model_gear/__pycache__/*",
    # Scaffolded templates are shipped data, not package runtime code — they run
    # inside the deployment's own containers (e.g. listen_server.py in the Parakeet
    # image, which imports nemo). Not unit-imported here.
    "model_gear/templates/*",
    # Realtime modules that import the [realtime] extra (fastapi / httpx / torch /
    # uvicorn) are not installed in the offline CI env, so they cannot be
    # unit-imported. They are integration-tested live (see docs/realtime-pipeline.md).
    # The stdlib-only realtime helpers (_settings, protocol, audio_facade) stay measured.
    "model_gear/realtime/app.py",
    "model_gear/realtime/__main__.py",
    "model_gear/realtime/tts_client.py",
]

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["model_gear"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.bandit]
exclude_dirs = ["tests"]
# B310: urllib.urlopen — all calls target the local vLLM endpoint (http://localhost).
skips = ["B101", "B404", "B603", "B310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
